refactor: 상수 에러 메시지 내용 수정 + isBlank() 사용
trim().isEmpty 는 isBlank() 와 기능이 같다.